--- a/system/SiteCP.conf
+++ b/system/SiteCP.conf
@@ -51,5 +51,5 @@ weatherSeeingFudge = 1.0
 #       Site Specific Database Table names
 #       Format =  string
 seeingTbl = Seeing
-cloudTbl = Cloud_2_worst
+cloudTbl = Cloud_3_bestworst
 
