--- a/system/SiteCP.conf
+++ b/system/SiteCP.conf
@@ -51,5 +51,5 @@ weatherSeeingFudge = 1.0
 #       Site Specific Database Table names
 #       Format =  string
 seeingTbl = Seeing
-cloudTbl = Cloud_4_worstbest
+cloudTbl = Cloud_5_random
 
